# searchspot

./: .gitignore  .slugignore  .travis.yml  Cargo.toml  LICENSE  Procfile  README.md  app.json  build.rs  circle.yml  docker-compose.yml
docker/: Dockerfile  README.md  env.list.example
examples/: config.toml  default.toml  tests.toml
src/: company.rs  config.rs  filters.rs  lib.rs  lib.rs.in  logger.rs  macros.rs  main.rs  main.rs.in  matches.rs  monitor.rs  resource.rs  search.rs  server.rs  terms.rs  user.rs
src/resources/: mod.rs  score.rs  talent.rs  user.rs
tests/: smoke.rs
tests/talents/: amsterdam_game_dev.json  backend_rust.json  frontend_ember.json  rejected.json  senior_java.json  sysadmin_with_clojure.json
