[package]
name    = "searchspot"
version = "0.12.2"

repository  = "https://github.com/honeypotio/searchspot"
authors     = ["Giovanni Capuano <webmaster@giovannicapuano.net>"]
license     = "BSD-2-Clause"
description = "The service responsible for Honeypot's ElasticSearch data"
keywords    = ["elasticsearch"]

[dependencies]
chrono       = "0.2"

iron         = "0.5"
router       = "0.5"
logger       = "0.3"
params       = "0.6"

lazy_static  = "0.2"
maplit       = "0.1"
oath         = "0.1"
log          = "0.3"
rollbar      = "0.3"
backtrace    = "0.2"

serde        = "0.8"
serde_json   = "0.8"
serde_derive = "0.8"

rs-es = "0.8"

[dependencies.toml]
version  = "0.2"
features = ["serde"]
default-features = false

[lib]
name = "searchspot"
path = "src/lib.rs"

[[bin]]
name = "searchspot"
path = "src/main.rs"
doc  = false
