[package]
name    = "searchspot"
version = "0.13.0"

repository  = "https://github.com/honeypotio/searchspot"
authors     = ["Giovanni Capuano <webmaster@giovannicapuano.net>"]
license     = "BSD-2-Clause"
description = "The service responsible for Honeypot's ElasticSearch data"
keywords    = ["elasticsearch"]

[dependencies]
chrono       = "0.3"

iron         = "0.5"
router       = "0.5"
logger       = "0.3"
params       = "0.6"
persistent   = "0.3"
unicase      = "1.4"

lazy_static  = "0.2"
maplit       = "0.1"
oath         = "0.1"
log          = "0.3"
rollbar      = "0.4"
backtrace    = "0.2"

serde        = "1.0"
serde_json   = "1.0"
serde_derive = "1.0"

rs-es = "0.10"

[dependencies.toml]
version  = "0.4"
features = ["serde"]
default-features = false

[lib]
name = "searchspot"
path = "src/lib.rs"

[[bin]]
name = "searchspot"
path = "src/main.rs"
doc  = false
