[package]
name    = "searchspot"
version = "0.16.0"

repository  = "https://github.com/honeypotio/searchspot"
authors     = ["Giovanni Capuano <webmaster@giovannicapuano.net>"]
license     = "BSD-2-Clause"
description = "The service responsible for Honeypot's ElasticSearch data"
keywords    = ["elasticsearch"]
autotests = false

[dependencies]
chrono       = "0.4"

iron         = "0.6"
router       = "0.6"
logger       = "0.4"
params       = "0.8"
persistent   = "0.4"
unicase      = "1.0"

lazy_static  = "1.0"
oath         = "0.10"
log          = "0.3"
rollbar      = "0.4"
backtrace    = "0.2"
toml         = "0.4"

serde        = "1.0"
serde_json   = "1.0"
serde_derive = "1.0"

num_cpus = "1.8"

rs-es = { git = "https://github.com/honeypotio/rs-es.git", branch = "dev" }

[patch.crates-io]
urlencoded = { git = 'https://github.com/ryman/urlencoded' }

[dev-dependencies]
urlencoded = "0.6"
url = "1.7"

[lib]
name = "searchspot"
path = "src/lib.rs"

[[bin]]
name = "searchspot"
path = "src/main.rs"
doc  = false

[[test]]
name = "smoke"
path = "tests/smoke.rs"
